Add another refactored version for testing

--- a/project-assistant-pro/framework/index.html
+++ b/project-assistant-pro/framework/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <!-- Import Matrix.css -->
-      <link rel="stylesheet" href="./assets/css/matrix.css">
+      <link rel="stylesheet" href="./assets/css/matrix-refactored.css">
       <link rel="stylesheet" href="./assets/css/matrix-documentation.css">
       <title>Matrix.css | The Ultimate Cyberpunk Framework</title>
    </head>
